--- a/src/styles/layout/_navigation.scss
+++ b/src/styles/layout/_navigation.scss
@@ -14,9 +14,6 @@
   .navigation-right {
     align-items: center;
     display: flex;
-  }
-
-  .navigation-right {
     margin: 0 $margin-lg;
   }
 
@@ -33,7 +30,6 @@
   .navigation-brand {
     cursor: pointer;
     line-height: $nav-height;
-    padding: 0 $padding-lg;
   }
 
   .navigation-menu {
